--- a/home/style.css
+++ b/home/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Rokkitt&display=swap');
+
 * {
     margin: 0;
     padding: 0;
@@ -7,12 +9,41 @@ body {
     background-color: #EEF2FF;
 }
 
+/*      Navigation     */
+
 .navigation-background {
     background-color: #CDDEFF;
     padding: 1.5rem;
 }
+ul, button, .greetings {
+    font-family: 'Rokkitt', serif;
+    font-weight: 400;
+}
 
+ul, li, button {
+    font-size: 40px;
+}
+li, ul {
+    list-style: none;
+    display: inline-block;
+    text-decoration: none;
+    margin-right: 10px;    
+}
+button {
+    background-color: #FF5959;
+    border: none;
+    padding: 10px;
+}
+
+nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+/*      Body        */
 .greetings {
-    margin: auto;
-    font-size: xx-large;
+    margin-top: 10rem;
+    font-size: 109px;
+    text-align: center;
 }
