--- a/src/about.css
+++ b/src/about.css
@@ -12,31 +12,81 @@ body {
 /*      Navigation     */
 
 .navigation-background {
-    background-color: #CDDEFF;
-    padding: 1.5rem;
+    padding: 1.7rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 2rem;
 }
 ul, button, .greetings {
     font-family: 'Rokkitt', serif;
     font-weight: 400;
 }
-
 ul, li, button {
     font-size: 40px;
 }
 li, ul {
     list-style: none;
     display: inline-block;
-    text-decoration: none;
-    margin-right: 10px;    
+    margin-right: 10px;
+    margin-left: 5px;
+}
+/*  For Greetings   */
+@keyframes opacityFunc {
+    from {
+        color: rgba(0, 0, 0, 0);
+    }
+    to {
+        color: black;
+    }
+}
+/*  This key frame is for all of the blocks or objects with writing on it   */
+@keyframes opacityobj {
+    from {
+        color: rgba(0, 0, 0, 0);
+        background-color: #cddeff00;
+    }
+    to {
+        color: black;
+        background-color: #CDDEFF;
+    }
+}
+/*  Nav Button  */
+@keyframes Bhovering {
+    from {
+        background-color: #FF5959;
+    }
+    to {
+        background-color: #ff59596a;
+    }
 }
 button {
     background-color: #FF5959;
     border: none;
-    padding: 10px;
+    border-radius: 15px;
+    margin-right: 10px;
+    padding: 5px 15px 5px 15px;
+    /*  top left bottom right   */
+}
+button:hover {
+    background-color: #ff59596a;
+    animation-name: Bhovering;
+    animation-duration: 1s;
 }
 
-nav {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+/*      Body        */
+
+.aboutme {
+    background-color: #CDDEFF;
+    border-radius: 2rem;
+    max-width: 70%;
+    margin: 10rem auto 10rem auto;
+    padding: 2rem;
+    animation-name: opacityobj;
+    animation-duration: 2s;
+}
+.summary {
+    text-align: center;
+    font-family: 'Rokkitt', serif;
+    font-size: 40px;
 }
