--- a/src/style.css
+++ b/src/style.css
@@ -12,38 +12,136 @@ body {
 /*      Navigation     */
 
 .navigation-background {
-    background-color: #CDDEFF;
-    padding: 1.5rem;
+    padding: 1.7rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 2rem;
 }
 ul, button, .greetings {
     font-family: 'Rokkitt', serif;
     font-weight: 400;
 }
-
 ul, li, button {
     font-size: 40px;
 }
 li, ul {
     list-style: none;
     display: inline-block;
-    text-decoration: none;
-    margin-right: 10px;    
+    margin-right: 10px;
+    margin-left: 5px;
 }
+/*  For Greetings   */
+@keyframes opacityFunc {
+    from {
+        color: rgba(0, 0, 0, 0);
+    }
+    to {
+        color: black;
+    }
+}
+/*  Nav Button  */
+@keyframes Bhovering {
+    from {
+        background-color: #FF5959;
+    }
+    to {
+        background-color: #ff59596a;
+    }
+}
+@keyframes Bactive /*   Get out of that chair!  */ {
+    from {
+        background-color: #FF5959;
+    }
+    to {
+        background-color: #cddeff;
+    }
+}
+
 button {
     background-color: #FF5959;
     border: none;
-    padding: 10px;
+    border-radius: 15px;
+    margin-right: 10px;
+    padding: 5px 15px 5px 15px;
+    /*  top left bottom right   */
+}
+button:hover {
+    animation-name: Bhovering;
+    animation-duration: 1s;
+}
+button:active {
+    animation-name: Bactive;
+    animation-duration: 1s;
 }
 
-nav {
+/*      Body        */
+
+/*--------------Grettings---------------*/
+.greetings {
+    margin: 5rem auto 15rem auto;
+    /*  top left bottom right   */
+    font-size: 109px;
+    text-align: center;
+    max-width: 70%;
+    animation-name: opacityFunc;
+    animation-duration: 3s;
+}
+/*-------Introduction to Product--------*/
+.productinfo {
+    max-width: 85%;
+    background-color: #CDDEFF;
+    font-family: 'Rokkitt', serif;
+    font-size: 40px;
+    border-radius: 1rem;
+    animation-name: opacityFunc;
+    animation-duration: 2s; 
+    padding: 2rem;
+    margin: 15rem auto 15rem auto;
+    /*  top left bottom right   */
+}
+/*-----------Avaliable OS's-------------*/
+.installprompt {
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
+.msg {
+    font-family: 'Rokkitt', serif;
+    font-weight: 600;
+    font-size: 35px;
+    background-color: #FF5959;
+    border-radius: 2rem;
+    padding: 2rem;
+    max-width: 50%;
+    margin: auto;
 
-/*      Body        */
-.greetings {
-    margin-top: 10rem;
-    font-size: 109px;
+}
+.img {
+    background-color: #ff595976;
+    max-width: 20%;
+    padding: 2rem;
+    margin: auto auto 15rem auto;
+    /*  top left bottom right   */
+}
+
+/*      Footer      */
+
+footer {
+    background-color: #CDDEFF;
+}
+
+.cpy {
+    font-family: 'Rokkitt', serif;
+    margin: auto;
+    padding: 1rem;
+    max-width: 50%;
+    text-align: center;
+}
+.credits {
+    font-family: 'Rokkitt', serif;
+    margin: auto;
+    padding: 1rem;
+    max-width: 50%;
     text-align: center;
 }
